<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA Calculator</string>
    <string name="official_name">Android GPA Calculator</string>
    <string name="icon_desc">Android GPA Calculator icon image</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="nameLabel">Triclops Productions™</string>
    <string name="Version">Version 0.1</string>
    <string name="calcButtonLabel">Calculate GPA</string>
    <string name="gpaLabel">Your GPA is:</string>
    <string name="class1_title">Class 1:</string>
    <string name="class2_title">Class 2:</string>
    <string name="class3_title">Class 3:</string>
    <string name="class4_title">Class 4:</string>
    <string name="class5_title">Class 5:</string>
    <string name="class6_title">Class 6:</string>
    <string name="class7_title">Class 7:</string>
    <string name="class8_title">Class 8:</string>
    <string name="class9_title">Class 9:</string>

    <string-array name="gradeArray">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>D-</item>
        <item>F</item>
    </string-array>

    <string name="title_activity_about">About</string>
    <string name="add_button">Add Class</string>
    <string name="remove_button">Remove Class</string>

</resources>