<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/class1_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class1_title"/>
    <Spinner 
        android:id="@+id/class1_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class1_title"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class1_title"/>
    <TextView 
        android:id="@+id/class2_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class1_title"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class2_title"/>
    <Spinner
        android:id="@+id/class2_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class2_title"
        android:layout_below="@+id/class1_spinner"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class2_title"/>
    <TextView 
        android:id="@+id/class3_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class2_title"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class3_title"/>
    <Spinner
        android:id="@+id/class3_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class3_title"
        android:layout_below="@+id/class2_spinner"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class3_title"/>
    <TextView 
        android:id="@+id/class4_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class3_title"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class4_title"/>
    <Spinner
        android:id="@+id/class4_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class3_title"
        android:layout_below="@+id/class3_spinner"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class4_title"/>
    <TextView 
        android:id="@+id/class5_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class4_title"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class5_title"/>
    <Spinner
        android:id="@+id/class5_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class4_title"
        android:layout_below="@+id/class4_spinner"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class5_title"/>
    <TextView 
        android:id="@+id/class6_title"
        style="@style/classText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/class5_title"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/class6_title"/>
    <Spinner
        android:id="@+id/class6_spinner"
        style="@style/gradeSpinner"
        android:layout_toRightOf="@+id/class6_title"
        android:layout_below="@+id/class5_spinner"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/class6_title"/>

</RelativeLayout>
